chore: configure Ignite addresses via application.yml